Implemented Scroll in table content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="datatable-container">
-      <div class="datatable-header">
+      <div class="datatable-tools">
           <div class="tools">
             <ul>
                 <li>
@@ -31,19 +31,54 @@
             <input type="text" name="" id="" class="search-input">
         </div>
       </div>
-      <table class="datatable-body">
-          <thead>
-              <tr>
-                  <th></th>
-                  <th>Status</th>
-                  <th>Name</th>
-                  <th>Position</th>
-                  <th>Office</th>
-                  <th>Age</th>
-                  <th>Date</th>
+      <div class="datatable-wrapper">
+        <table class="datatable-content" id="dataTableId">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Status</th>
+                    <th>Name</th>
+                    <th>Position</th>
+                    <th>Office</th>
+                    <th>Age</th>
+                    <th>Date</th>
+                    <th>Hour</th>
+                    <th>Comments</th>
+                    <th>Comments</th>
+                    <th>Comments</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="table-checkbox">
+                        <input type="checkbox" name="" id="">
+                    </td>
+                    <td><span class="away"></span></td>
+                    <td>Mateo Vinicus</td>
+                    <td>CEO</td>
+                    <td>San Francisco</td>
+                    <td>33</td>
+                    <td>20/05/01</td>
+                    <td>16:54:10</td>
+                    <td>This is a comment inline</td>
+                    <td>This is a comment inline</td>
+                    <td>This is a comment inline</td>
+                  </tr>
+                <tr>
+                  <td class="table-checkbox">
+                      <input type="checkbox" name="" id="">
+                  </td>
+                  <td><span class="away"></span></td>
+                  <td>Mateo Vinicus</td>
+                  <td>CEO</td>
+                  <td>San Francisco</td>
+                  <td>33</td>
+                  <td>20/05/01</td>
+                  <td>16:54:10</td>
+                  <td>This is a comment inline</td>
+                  <td>This is a comment inline</td>
+                  <td>This is a comment inline</td>
               </tr>
-          </thead>
-          <tbody>
               <tr>
                   <td class="table-checkbox">
                       <input type="checkbox" name="" id="">
@@ -54,6 +89,10 @@
                   <td>San Francisco</td>
                   <td>33</td>
                   <td>20/05/01</td>
+                  <td>16:54:10</td>
+                  <td>This is a comment inline</td>
+                  <td>This is a comment inline</td>
+                  <td>This is a comment inline</td>
               </tr>
               <tr>
                 <td class="table-checkbox">
@@ -65,6 +104,10 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
+                <td>16:54:10</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
             </tr>
             <tr>
                 <td class="table-checkbox">
@@ -76,6 +119,10 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
+                <td>16:54:10</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
             </tr>
             <tr>
                 <td class="table-checkbox">
@@ -87,6 +134,10 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
+                <td>16:54:10</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
             </tr>
             <tr>
                 <td class="table-checkbox">
@@ -98,6 +149,10 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
+                <td>16:54:10</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
             </tr>
             <tr>
                 <td class="table-checkbox">
@@ -109,6 +164,10 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
+                <td>16:54:10</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
             </tr>
             <tr>
                 <td class="table-checkbox">
@@ -120,20 +179,16 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
+                <td>16:54:10</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
+                <td>This is a comment inline</td>
             </tr>
-            <tr>
-                <td class="table-checkbox">
-                    <input type="checkbox" name="" id="">
-                </td>
-                <td><span class="away"></span></td>
-                <td>Mateo Vinicus</td>
-                <td>CEO</td>
-                <td>San Francisco</td>
-                <td>33</td>
-                <td>20/05/01</td>
-            </tr>
-          </tbody>
-      </table>
+              
+            </tbody>
+        </table>
+      </div>
+     
       <div class="datatable-footer">
           <div class="list-items">
               show <select name="" id="">
@@ -156,5 +211,6 @@
           </div>
       </div>
     </div>
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
