Implemented filter per hour

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       <link rel="stylesheet" href="/assets/css/main.css">
   </head>
   <body>
+
+    <div style="display: flex;padding: 0.5em;">
+        <input type="time" name="" id="timeFrom">
+        <input type="time" name="" id="timeTo">
+    </div>
+
     <div class="datatable-container">
       <div class="datatable-tools">
           <div class="tools">
@@ -74,7 +80,7 @@
                   <td>San Francisco</td>
                   <td>33</td>
                   <td>20/05/01</td>
-                  <td>16:54:10</td>
+                  <td>13:42:10</td>
                   <td>This is a comment inline</td>
                   <td>This is a comment inline</td>
                   <td>This is a comment inline</td>
@@ -104,7 +110,7 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
-                <td>16:54:10</td>
+                <td>12:54:10</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
@@ -119,7 +125,7 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
-                <td>16:54:10</td>
+                <td>18:54:10</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
@@ -134,7 +140,7 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
-                <td>16:54:10</td>
+                <td>19:54:10</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
@@ -149,7 +155,7 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
-                <td>16:54:10</td>
+                <td>11:54:10</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
@@ -164,7 +170,7 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
-                <td>16:54:10</td>
+                <td>8:54:10</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
@@ -179,7 +185,7 @@
                 <td>San Francisco</td>
                 <td>33</td>
                 <td>20/05/01</td>
-                <td>16:54:10</td>
+                <td>6:54:10</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
                 <td>This is a comment inline</td>
