Implemented overflow pop up in DataTable cell

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
                     <td>16:54:10</td>
                     <td>This is a comment inline</td>
                     <td>This is a comment inline</td>
-                    <td>This is a comment inline</td>
+                    <td> 
+                        <abbr title="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit maxime sequi magnam recusandae quasi laboriosam architecto cupiditate inventore repudiandae eum, quibusdam voluptas aliquam molestiae fugiat omnis. Qui quo magnam architecto!">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit maxime sequi magnam recusandae quasi laboriosam architecto cupiditate inventore repudiandae eum, quibusdam voluptas aliquam molestiae fugiat omnis. Qui quo magnam architecto!
+                        </abbr>    
+                    </td>
+                   
                   </tr>
                 <tr>
                   <td class="table-checkbox">
@@ -81,7 +86,7 @@
                   <td>33</td>
                   <td>20/05/01</td>
                   <td>13:42:10</td>
-                  <td>This is a comment inline</td>
+                  <td>This a comment that overflow cell´s width so it should be shown in a pop up</td>
                   <td>This is a comment inline</td>
                   <td>This is a comment inline</td>
               </tr>
@@ -217,6 +222,6 @@
           </div>
       </div>
     </div>
-    <script src="./assets/js/app.js"></script>
+    <script type="module" src="./assets/js/app.js"></script>
   </body>
 </html>
